samples/_failures_safe/1761725761_4f3a2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8004b9e9.c: In function ‘main’:
./samples/SAFE/__tmp_8004b9e9.c:144:12: error: expected declaration or statement at end of input
  144 |     struct StateMachine sm;
      |            ^~~~~~~~~~~~
